test/visibility/import/edgeCases/multipleDef.good
multipleDef.chpl:2: error: symbol x is multiply defined
note: 'x' was last reexported at multipleDef.chpl:8
multipleDef.chpl:5: note: also defined here
